Alignment issues fixed

--- a/styles/other.scss
+++ b/styles/other.scss
@@ -96,7 +96,8 @@ html {
     overflow: hidden;
     background-color: var(--white);
 
-    justify-content: center;
+    justify-content: flex-start;
+    padding-top: 10vh;
     gap: 48px;
     p {
       line-height: calc(var(--font-size) * 1.8);
