--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -490,7 +490,7 @@ html {
             justify-content: flex-start;
             gap: 1px;
             overflow-x: scroll;
-            overflow-y: visible;
+            overflow-y: hidden;
             scroll-snap-type: x mandatory;
             scroll-behavior: smooth;
             padding: 0;
@@ -516,6 +516,10 @@ html {
               box-shadow: 1px 3px 20px 0px #46464656;
               position: relative;
               align-items: center;
+              padding: 8px 16px;
+              .heading {
+                height: 15%;
+              }
               p {
                 text-align: center;
               }
